--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>spring-cloud-eureka-client</module>
         <module>spring-cloud-ribbon</module>
         <module>spring-cloud-feign</module>
+        <module>spring-cloud-turbine</module>
     </modules>
 
     <dependencies>
